# chessbot

./: .pkg  CMakeLists.txt
cmake/: pkg.cmake
exe/: filter_pgns.cc  perft.cc  train_nn.cc
include/chessbot/: activation_function.h  bitboard.h  chessbot.h  constants.h  dfs.h  generate_moves.h  magic.h  mcts.h  move.h  nn.h  nn_chess.h  north_west.h  optimizer.h  pgn.h  plot.h  position.h  read_training_set.h  real_t.h  sigmoid.h  square.h  stockfish_evals.h  timing.h  util.h  zobrist.h
src/: chessbot.cc  magic.cc  main.cc  move.cc  pgn.cc  position.cc  stockfish_evals.cc  util.cc  zobrist.cc
test/: attack_bb_test.cc  checkers_pinners_blockers_test.cc  game_tree_test.cc  magic_test.cc  mcts_test.cc  move_eval_test.cc  move_test.cc  nn_chess_test.cc  nn_test.cc  parse_pgn_test.cc  print_position_test.cc  read_training_set.cc  stockfish_test.cc  test_position.h  util_test.cc  zobrist_test.cc
